// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with default slot 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Alarm list settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
    <div
      class="default-slot"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: alarm-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Alarm list settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: alarm-statistics-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Alarm statistics settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: availability-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Availability settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: bar-chart-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Bar chart settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: context-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Context table settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: counter-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Counter settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: line-chart-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Line chart settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: map-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Mapping widget settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: numbers-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Numbers settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: pie-chart-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Pie chart settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: service-weather-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Service weather settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: stats-calendar-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Stats calendar settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: testing-weather-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Testing weather
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: text-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          Text settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` with type: user-statistics-settings 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(0%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <div>
      <div
        class="v-list v-sheet theme--light secondary"
        role="list"
      >
        <div
          class="v-list-item theme--light"
          role="listitem"
          tabindex="-1"
        >
          <div
            class="v-list-item__title white--text text-subtitle-1"
          >
          User statistics settings
          </div>
          <button
            class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light white--text"
              >
                close
              </i>
            </span>
          </button>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="v-divider theme--light"
        role="separator"
      />
    </div>
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;

exports[`sidebar-wrapper Renders \`sidebar-wrapper\` without sidebar name 1`] = `
<aside
  class="v-navigation-drawer v-navigation-drawer--close v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--right v-navigation-drawer--temporary theme--light"
  style="height: 100%; top: 0px; transform: translateX(100%); width: 450px;"
>
  <div
    class="v-navigation-drawer__content"
  >
    <!---->
    <div
      class="default-slot"
    />
  </div>
  <div
    class="v-navigation-drawer__border"
  />
</aside>
`;
